<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="profile"
            type="com.parkingreservation.iuh.demologinmvp.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--User Name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_account_box"
                android:tint="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/profile_user_name"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingStart="16dp"
                    android:text="@{profile.name}"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <!--Phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_phone"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/profile_phone" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/profile_phone"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingStart="16dp"
                    android:text="@{profile.phoneNumber}"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <!--Email-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_email"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/profile_email" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/profile_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingStart="16dp"
                    android:text="@{profile.email}"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <!--Address-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:src="@drawable/ic_location"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/profile_address" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/profile_address"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:paddingStart="16dp"
                    android:text="@{profile.address}"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>

        <!--Vehicle-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:padding="10dp"
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_directions_car"
                android:contentDescription="@string/profile_vehicle" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">


                <TextView
                    android:textSize="17sp"
                    android:paddingBottom="8dp"
                    android:paddingStart="16dp"
                    android:text="@string/profile_vehicle"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:paddingStart="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="Roboto Regular"
                    android:text="@string/loading"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="16sp"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>